--- a/basic/basic-cmdline.yaml
+++ b/basic/basic-cmdline.yaml
@@ -9,7 +9,11 @@ metadata:
     scope:
         - functional
     devices:
+        - apalis-imx6
+        - apalis-t30
+        - apalis-tk1
         - colibri-imx6
+        - colibri-imx7
 
 run:
     steps:
