Adding more tests to the opkg python install

--- a/basic/basic-opkg-python.yaml
+++ b/basic/basic-opkg-python.yaml
@@ -17,6 +17,8 @@ metadata:
 
 run:
     steps:
+        - opkg --help
+        - ifconfig
         - ping -c 4 8.8.8.8
         - ping -c 4 google.com
         - opkg update
