--- a/basic/basic-shell-script.yaml
+++ b/basic/basic-shell-script.yaml
@@ -24,5 +24,5 @@ run:
     steps:
         - pwd
         - find / -name "hello.sh"
-        - ./lava-tests/hello.sh
+        - ./basic/hello.sh
       
