Trying to download the custom shell script before executing [5]

--- a/basic/basic-shell-script.yaml
+++ b/basic/basic-shell-script.yaml
@@ -15,9 +15,9 @@ metadata:
         - colibri-imx6
         - colibri-imx7
 
-install:
-    git-repos:
-        - https://github.com/leograba/lava-tests.git
+#install:
+#    git-repos:
+#        - https://github.com/leograba/lava-tests.git
 
 
 run:
