Basic shell script now works

--- a/basic/basic-shell-script.yaml
+++ b/basic/basic-shell-script.yaml
@@ -22,10 +22,8 @@ metadata:
 
 run:
     steps:
-        - pwd
-        - ls
-        - ls basic
+        - lava-test-case test-pwd --shell pwd
+        - lava-test-case test-ls --shell ls
         - ls -l /lava*/0/tests/2_basic-shell-script/basic/hello.sh
-        - find / -name "hello.sh" | grep "basic-shell-script"
         - $(find / -name "hello.sh" | grep "basic-shell-script")
-      
+
