--- a/basic/basic-shell-script.yaml
+++ b/basic/basic-shell-script.yaml
@@ -22,8 +22,6 @@ metadata:
 
 run:
     steps:
-        - lava-test-case test-pwd --shell pwd
-        - lava-test-case test-ls --shell ls
-        - ls -l /lava*/0/tests/2_basic-shell-script/basic/hello.sh
-        - $(find / -name "hello.sh" | grep "basic-shell-script")
+        - ls -l basic/hello.sh
+        - ./basic/hello.sh
 
