Smoke tests written

--- a/master/smoke-tests-basic.yaml
+++ b/master/smoke-tests-basic.yaml
@@ -1,5 +1,5 @@
     device_type: apalis-imx6
-    job_name: Basic shell script test execution
+    job_name: Test basic commands such as ls
 
     timeouts:
       job:
@@ -48,12 +48,9 @@
         timeout:
           minutes: 5
         definitions:
-#        - repository: https://github.com/leograba/lava-tests.git
-#          from: git
-#          path: basic/basic-cmdline.yaml
-#          name: test-basic-commands
         - repository: https://github.com/leograba/lava-tests.git
           from: git
-          path: basic/basic-shell-script.yaml
-          name: basic-shell-script
+          path: basic/smoke-tests-basic.yaml
+          name: test-basic-commands
+
 
