--- a/basic/smoke-tests-basic.yaml
+++ b/basic/smoke-tests-basic.yaml
@@ -1,7 +1,7 @@
 metadata:
     format: Lava-Test Test Definition 1.0
     name: test-basic-commands
-    description: "Test ls command"
+    description: "Test basic commands"
     maintainer:
         - leogveiga@gmail.com
     os:
@@ -25,3 +25,9 @@ run:
         - lava-test-case test-cp --shell cp /home/root/testfile /home/root/testdir/testfile
         - lava-test-case test-mv --shell mv /home/root/testdir/testfile /home/root/testdir/testfile2
         - lava-test-case test-rm --shell rm -rf /home/root/testdir
+        - lava-test-case test-uname --shell uname -a
+        - lava-test-case test-ifconfig --shell ifconfig -a
+        - lava-test-case test-route --shell route
+        - lava-test-case test-ping --shell ping -c4 8.8.8.8
+        - lava-test-case test-wget --shell wget http://www.google.com/index.html
+        - lava-test-case test-lsusb --shell lsusb
