Fix path for written tests

--- a/apalis_imx6/smoke-tests-basic.yaml
+++ b/apalis_imx6/smoke-tests-basic.yaml
@@ -50,7 +50,7 @@
         definitions:
         - repository: https://github.com/leograba/lava-tests.git
           from: git
-          path: basic/smoke-tests-basic.yaml
+          path: common/smoke-tests-basic.yaml
           name: test-basic-commands
 
 
