Instead of running a script, only run python --version to test if installed correctly

--- a/common/basic-opkg-python.yaml
+++ b/common/basic-opkg-python.yaml
@@ -20,5 +20,5 @@ run:
         - lava-test-case internet-available-test ping -c 4 8.8.8.8
         - lava-test-case internet-dns-working ping -c 4 google.com
         - lava-test-case update-feeds opkg update
-        - lava-test-case install-python opkg install python-dev
-        - lava-test-case test-python python ./hello.py
+        - lava-test-case install-python opkg install python
+        - lava-test-case test-python python --version
