Added largepull test to Apalis iMX6

--- a/apalis_imx6/opkg.yaml
+++ b/apalis_imx6/opkg.yaml
@@ -56,3 +56,7 @@
           from: git
           path: basic/basic-opkg-python.yaml
           name: opkg-install-python
+        - repository: https://github.com/leograba/lava-tests.git
+          from: git
+          path: basic/basic-opkg-largepull.yaml
+          name: opkg-largepull
