Added read-ahead test case that should work for all modules

--- a/apalis_imx6/read_ahead.yaml
+++ b/apalis_imx6/read_ahead.yaml
@@ -50,6 +50,6 @@
         definitions:
         - repository: https://github.com/leograba/lava-tests.git
           from: git
-          path: common/mmc_read_ahead_apalis_imx6.yaml
-          name: mmc-read-ahead
+          path: common/read_ahead_apalis_imx6.yaml
+          name: read-ahead-size-check
 
