Fix path for the shell scripts used in the tests, after moving them to common/sh_scripts

--- a/common/basic-shell-script.yaml
+++ b/common/basic-shell-script.yaml
@@ -22,6 +22,6 @@ metadata:
 
 run:
     steps:
-        - lava-test-case test-script-exists --shell ls -l basic/hello.sh
-        - ./basic/hello.sh
+        - lava-test-case test-script-exists --shell ls -l common/sh_scripts/hello.sh
+        - ./common/sh_scripts/hello.sh
 
