Added delay before the test actually begin, since resize2fs takes some time to finish

--- a/common/flash_resize.yaml
+++ b/common/flash_resize.yaml
@@ -27,6 +27,7 @@ metadata:
 
 run:
     steps:
+        - 'sleep 180' # If this is the first boot, have to wait for resize to complete
         - 'ARGS=`uname -a | cut -d '' '' -f2`'
         - './common/sh_scripts/read_ahead.sh $ARGS'
         - 'if [ $? -eq 0 ] ; then'
