--- a/apalis_imx6/opkg.yaml
+++ b/apalis_imx6/opkg.yaml
@@ -50,13 +50,13 @@
         definitions:
         - repository: https://github.com/leograba/lava-tests.git
           from: git
-          path: basic/basic-opkg.yaml
+          path: common/basic-opkg.yaml
           name: test-opkg
         - repository: https://github.com/leograba/lava-tests.git
           from: git
-          path: basic/basic-opkg-python.yaml
+          path: common/basic-opkg-python.yaml
           name: opkg-install-python
         - repository: https://github.com/leograba/lava-tests.git
           from: git
-          path: basic/basic-opkg-largepull.yaml
+          path: common/basic-opkg-largepull.yaml
           name: opkg-largepull
