--- a/common/basic-opkg-largepull.yaml
+++ b/common/basic-opkg-largepull.yaml
@@ -17,9 +17,9 @@ metadata:
 
 run:
     steps:
-        - lava-test-case internet-available-test ping -c 4 8.8.8.8
-        - lava-test-case internet-dns-working ping -c 4 google.com
-        - lava-test-case update-feeds opkg update
-        - lava-test-case install-largepull opkg install packagegroup-sdk-target
-        - lava-test-case test-gcc gcc --version
-        - lava-test-case test-make make --version
+        - lava-test-case internet-available-test --shell ping -c 4 8.8.8.8
+        - lava-test-case internet-dns-working --shell ping -c 4 google.com
+        - lava-test-case update-feeds --shell opkg update
+        - lava-test-case install-largepull --shell opkg install packagegroup-sdk-target
+        - lava-test-case test-gcc --shell gcc --version
+        - lava-test-case test-make --shell make --version
