--- a/common/hdparm.yaml
+++ b/common/hdparm.yaml
@@ -22,6 +22,7 @@ metadata:
 
 run:
     steps:
+        - 'lava-test-case hdparm-available --shell hdparm --help'
         - 'ARGS=`uname -a | cut -d '' '' -f2`'
         - './common/sh_scripts/hdparm.sh $ARGS'
         - 'if [ $? -eq 0 ] ; then'
