Added sanity check for nbench

--- a/common/nbench.yaml
+++ b/common/nbench.yaml
@@ -24,6 +24,7 @@ run:
     steps:
 # Currently the nbench results are not parsed. This should be improved
 #       - 'curl https://raw.githubusercontent.com/RTEMS/examples-v2/master/benchmarks/nbench/nbench-byte-2.2.3/NNET.DAT > NNET.DAT'
+        - 'lava-test-case nbench-available --shell nbench --help'
         - 'OPT=""' #Add nbench command-line options here if needed
         - 'nbench $OPT | tee nbench.log'
         - 'log_file_size=`ls -l nbench.log | awk ''{printf $5}''`'
