Bugfix: passa module name as parameter to the shell script

--- a/common/nbench.yaml
+++ b/common/nbench.yaml
@@ -25,7 +25,7 @@ run:
 # Currently the nbench results are not parsed. This should be improved
         - 'lava-test-case nbench-available --shell nbench --help'
         - 'curl https://raw.githubusercontent.com/RTEMS/examples-v2/master/benchmarks/nbench/nbench-byte-2.2.3/NNET.DAT > NNET.DAT'
-        - 'OPT=""' #Add nbench command-line options here if needed
+        - 'OPT=`uname -a | cut -d '' '' -f2`' #Add nbench command-line options here if needed
         - 'nbench $OPT | tee nbench.log'
         - 'log_file_size=`ls -l nbench.log | awk ''{printf $5}''`'
         - 'if [ ${log_file_size} -gt 0 ]; then'
