--- a/common/audio-smoke-tests.yaml
+++ b/common/audio-smoke-tests.yaml
@@ -1,7 +1,7 @@
 metadata:
     format: Lava-Test Test Definition 1.0
-    name: audio-tests
-    description: "Test the audio sound cards"
+    name: audio-smoke-tests
+    description: "Test if audio CLI tools/applications are installed"
     maintainer:
         - leogveiga@gmail.com
     os:
@@ -15,14 +15,10 @@ metadata:
         - colibri-imx6
         - colibri-imx7
 
-#install:
-#    git-repos:
-#        - https://github.com/leograba/lava-tests.git
-
-
 run:
     steps:
         - 'lava-test-case aplay-available --shell aplay --help'
         - 'lava-test-case arecord-available --shell arecord --help'
         - 'lava-test-case amixer-available --shell amixer --help'
         - 'lava-test-case gst-playbin-available --shell gst-inspect playbin'
+        - 'lava-test-case speaker-test-available --shell  playbin'
